// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> renders cart count badge with cart provided 1`] = `
<nav
  className="nav-bar"
>
  <input
    className="nav-bar__checkbox"
    id="nav-toggle"
    type="checkbox"
  />
  <label
    className="nav-bar__burger-btn"
    htmlFor="nav-toggle"
    role="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="bars"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </label>
  <div
    className="nav-bar__collapse-wrapper"
  >
    <div
      className="nav-bar__left"
    >
      <NavLink
        className="navbrand"
        to="/"
      >
        Mug Store
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/cart"
      >
        Cart
        <span
          className="cart-count-badge"
        >
          11
        </span>
      </NavLink>
    </div>
    <div
      className="nav-bar__right"
    >
      <CurrenciesDropdown
        currencyState={
          Object {
            "currencies": Array [],
            "currenciesStatus": Object {
              "error": "",
              "hasFailed": false,
              "isInProcess": true,
            },
            "currentCurrency": Object {
              "id": "0",
            },
          }
        }
        onChange={[MockFunction]}
      />
      <LoginLogoutBar
        currentUserName=""
        logoutUser={[MockFunction]}
      />
    </div>
  </div>
</nav>
`;

exports[`<Navbar /> renders currencies dropdown filled with currencies list when provided 1`] = `
<nav
  className="nav-bar"
>
  <input
    className="nav-bar__checkbox"
    id="nav-toggle"
    type="checkbox"
  />
  <label
    className="nav-bar__burger-btn"
    htmlFor="nav-toggle"
    role="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="bars"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </label>
  <div
    className="nav-bar__collapse-wrapper"
  >
    <div
      className="nav-bar__left"
    >
      <NavLink
        className="navbrand"
        to="/"
      >
        Mug Store
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
    <div
      className="nav-bar__right"
    >
      <CurrenciesDropdown
        currencyState={
          Object {
            "currencies": Array [
              Object {
                "id": "1",
                "name": "CURR1",
              },
              Object {
                "id": "2",
                "name": "CURR2",
              },
            ],
            "currenciesStatus": Object {
              "error": "",
              "hasFailed": false,
              "isInProcess": false,
            },
            "currentCurrency": Object {
              "id": "2",
            },
          }
        }
        onChange={[MockFunction]}
      />
      <LoginLogoutBar
        currentUserName=""
        logoutUser={[MockFunction]}
      />
    </div>
  </div>
</nav>
`;

exports[`<Navbar /> renders properly with default props 1`] = `
<nav
  className="nav-bar"
>
  <input
    className="nav-bar__checkbox"
    id="nav-toggle"
    type="checkbox"
  />
  <label
    className="nav-bar__burger-btn"
    htmlFor="nav-toggle"
    role="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="bars"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </label>
  <div
    className="nav-bar__collapse-wrapper"
  >
    <div
      className="nav-bar__left"
    >
      <NavLink
        className="navbrand"
        to="/"
      >
        Mug Store
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
    <div
      className="nav-bar__right"
    >
      <CurrenciesDropdown
        currencyState={
          Object {
            "currencies": Array [],
            "currenciesStatus": Object {
              "error": "",
              "hasFailed": false,
              "isInProcess": true,
            },
            "currentCurrency": Object {
              "id": "0",
            },
          }
        }
        onChange={[MockFunction]}
      />
      <LoginLogoutBar
        currentUserName=""
        logoutUser={[MockFunction]}
      />
    </div>
  </div>
</nav>
`;

exports[`<Navbar /> renders user name with currentUser provided 1`] = `
<nav
  className="nav-bar"
>
  <input
    className="nav-bar__checkbox"
    id="nav-toggle"
    type="checkbox"
  />
  <label
    className="nav-bar__burger-btn"
    htmlFor="nav-toggle"
    role="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="bars"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </label>
  <div
    className="nav-bar__collapse-wrapper"
  >
    <div
      className="nav-bar__left"
    >
      <NavLink
        className="navbrand"
        to="/"
      >
        Mug Store
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
    <div
      className="nav-bar__right"
    >
      <CurrenciesDropdown
        currencyState={
          Object {
            "currencies": Array [],
            "currenciesStatus": Object {
              "error": "",
              "hasFailed": false,
              "isInProcess": true,
            },
            "currentCurrency": Object {
              "id": "0",
            },
          }
        }
        onChange={[MockFunction]}
      />
      <LoginLogoutBar
        currentUserName="testUsername"
        logoutUser={[MockFunction]}
      />
    </div>
  </div>
</nav>
`;

exports[`<Navbar /> renders with currenciesStatus.hasFailed and error provided 1`] = `
<nav
  className="nav-bar"
>
  <input
    className="nav-bar__checkbox"
    id="nav-toggle"
    type="checkbox"
  />
  <label
    className="nav-bar__burger-btn"
    htmlFor="nav-toggle"
    role="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="bars"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </label>
  <div
    className="nav-bar__collapse-wrapper"
  >
    <div
      className="nav-bar__left"
    >
      <NavLink
        className="navbrand"
        to="/"
      >
        Mug Store
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="navlink"
        role="navigation"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
    <div
      className="nav-bar__right"
    >
      <CurrenciesDropdown
        currencyState={
          Object {
            "currenciesStatus": Object {
              "error": "test error",
              "hasFailed": true,
              "isInProcess": false,
            },
          }
        }
        onChange={[MockFunction]}
      />
      <LoginLogoutBar
        currentUserName=""
        logoutUser={[MockFunction]}
      />
    </div>
  </div>
</nav>
`;
